--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Personal Website Aida</title>
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
+
+	
+		<a href="index.html" target="blank"><a href="https://coinsfpm.com/"><img src="images/facebook.png" alt="Facebook Icon" style="width:60px; height:60px;"> </a>
+		<a href="index.html" target="blank"><a href="https://coinsfpm.com/"><img src="images/instagram.png" alt="Instagram Icon" style="width:50px; height:55px;"> </a>
+		<a href="index.html" target="blank"><a href="https://coinsfpm.com/"><img src="images/twitter.png" alt="Twitter Icon" style="width:65px; height:65px;"> </a>
+
+		 
+		
+		
+	
+	<ul>
+		<li><a href="index.html" target="blank">Home</li>
+		<li><a href="biodata.html" target="blank">Biodata</li>
+		<li><a href="experience.html" target="blank">Experience</li>
+		<li><a href="education.html" target="blank">Education</li>
+		<li><a href="family.html" target="blank">Family</li>
+		<li><a href="gallery.html" target="blank">Gallery</li> 
+	
+		
+	</ul>
+
+
+
+	<img src="images/myself.jpg" style="height: 900px; width: 1690px;"> <br>
+
+	
+
+
 
 	
 </body>
