--- a/biodata.html
+++ b/biodata.html
@@ -4,8 +4,54 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>biodata</title>
+	<link rel="stylesheet"  href="css/style1.css">
+
 </head>
 <body>
+
+	<ul>
+		<li><a href="index.html" target="blank">Home </a></li>
+		<li><a href="biodata.html" target="blank">About Me</a></li>
+		<li><a href="experience.html" target="blank">Experience</a></li>
+		<li><a href="education.html" target="blank">Education</a></li>
+		<li><a href="family.html" target="blank">Family</a></li>
+		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+	
+		
+	</ul>
+
+	<br>
+
+	<center><h1>About me</h1></center>
+	<center><p>~ a 20 years old girl with a big dream ~</p></center>
+
+	<br>
+
+	<center><img src="images/me.jpg" style="height: 250px; width: 200px;"></center> <br>
+
+	<dl>
+		<dt><b>_About Myself_</b></dt><br>
+		<dd>Hello Guys...... my name is Aida Syafiqah Binti Amirudin, i'm from Klang, Selangor. I am now 20 years old, and my birthday is April 11, 2002. I am a Diploma in Information Management, Faculty of Information Management, UITM Kelantan Branch Machang Campus, semester 5 student. </dd> <br>
+		<dt><b>_My Hobby_</b></dt><br>
+		<dd>My most recent hobby has been watching anime series and films. This is because it is enjoyable and can help me relax while studying. In my spare time, I enjoy watching anime with my friends. Furthermore, it can provide me with new knowledge, such as the opportunity to learn Japanese from watching the series.</dd><br>
+		<dt><b>_My Dream_</b></dt><br>
+		<dd>My dream is to have a stable career in the future. This is because the increasingly challenging life in Malaysia at work makes me aspire to have a stable career that suits my interests. Now I'm trying to strengthen my understanding of foreign languages such as Japanese, Korean, and Mandarin to get better job opportunities. By having a stable career, I can travel to my dream countries, such as Japan, Korea, the United States, and Switzerland.</dd>
+	</dl>
+
+
+<br>
+
+	<center><h1>Contact me</h1></center>
+
+
+
+
+
+	
+
+
+
+	
 
 </body>
 </html>
