--- a/experience.html
+++ b/experience.html
@@ -4,8 +4,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>experience</title>
+	<link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
+
+	<ul>
+		<li><a href="index.html" target="blank">Home </a></li>
+		<li><a href="biodata.html" target="blank">About Me</a></li>
+		<li><a href="experience.html" target="blank">Experience</a></li>
+		<li><a href="education.html" target="blank">Education</a></li>
+		<li><a href="family.html" target="blank">Family</a></li>
+		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+	
+		
+	</ul>
+
 
 </body>
 </html>
