--- a/biodata.html
+++ b/biodata.html
@@ -42,6 +42,29 @@
 <br>
 
 	<center><h1>Contact me</h1></center>
+	<br>
+	<center>
+		<img src="images/mail.png" alt="E-mail Icon" style="width:50px; height: 50px;"> <b><p>~E-mail~</p></b>
+		<p>syafiqaaida02@gmail.com</p> <br>
+		<img src="images/phone.png" alt="Phone Icon" style="width:50px; height: 50px;"> <b><p>~Call me~</p></b>
+		<p>+6016-364 7203</p>
+
+	</center>
+
+	<br>
+
+
+	<center><b><p>~My social media~</p></b></center>
+	<center>
+	<a href="https://www.facebook.com/aida.syafiqa.12?mibextid=ZbWKwL"><img src="images/facebook.png" alt="Facebook Icon" style="width:50px; height: 50px;"> </a>
+	<a href="https://instagram.com/aidasyi?igshid=NTA5ZTk1NTc="><img src="images/instagram.png" alt="Instagram Icon" style="width:55px; height: 55px;"> </a>
+	<a href="https://twitter.com/Ashwho96?t=DGDh5ux26rYouWOsMZqxYw&s=35"><img src="images/twitter.png" alt="Twitter Icon" style="width:55px; height: 55px;"> </a>
+
+	</center>
+
+
+	
+	
 
 
 
