--- a/education.html
+++ b/education.html
@@ -19,5 +19,87 @@
 		
 	</ul>
 
+	<center>
+
+	<h1>My education</h1>
+
+	<br>
+
+	<h2>Sekolah Kebangsaan Bukit Kapar</h2>
+
+	<img src="images/skbk.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+	<p>I studied at <strong>Sekolah Kebangsaan Bukit Kapar</strong> for 6 years from 7 years old to 12 years old >_<</p>
+
+	<br>
+
+	<h2>Sekolah Menengah Kebangsaan Perempuan Kapar</h2>
+
+	<img src="images/smkpk.png" style="width: 300px; height: 300px;">
+
+	<br>
+	<p>I made so may memories and friends at <strong>SMKPK</strong> for 5 years, and i like this school very much because this school just for girl and we as students are really close like a happy family -_-</p>
+
+	<br>
+
+	<h2>Universiti Teknologi Mara Machang, Kelantan</h2>
+
+	<img src="images/uitm.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+	<p> I continue my studies at <strong>UITM Machang</strong> , as an Information Management students ~_~</p>
+
+
+
+
+	</center>
+
+	<br>
+	<br>
+
+	<center>
+
+	<table style="width: 50%">
+		
+		<tr>
+			<th>No.</th>
+			<th>Education</th>
+			<th>Years</th>
+		</tr>
+
+		<tr>
+			<td><center>1.</center></td>
+			<td><center>Pasti Nurul Hidayah</center></td>
+			<td><center>2008</center></td>
+		</tr>
+
+			<tr>
+			<td><center>2.</center></td>
+			<td><center>Sekolah Kebangsaan Bukit Kapar</center></td>
+			<td><center>2009-2014</center></td>
+		</tr>
+
+			<tr>
+			<td><center>3.</center></td>
+			<td><center>Sekolah Menengah Kebangsaan Perempuan Kapar</center></td>
+			<td><center>2015-2019</center></td>
+		</tr>
+
+			<tr>
+			<td><center>4.</center></td>
+			<td><center>Universiti Teknologi Mara Machang, Kelantan</center></td>
+			<td><center>2020-2023</center></td>
+		</tr>
+
+		</center>
+
+
+
+
+	
+
+
+
 </body>
 </html>
