--- a/experience.html
+++ b/experience.html
@@ -19,6 +19,39 @@
 		
 	</ul>
 
+	<center><h1>My journey</h1></center>
+
+	<center>
+
+	<img src="images/classmates.jpg" style="width: 900px; height: 500px;">
+	
+	<br>
+	
+
+
+	<p>The journey of my diploma learning process has been very interesting. Throughout the three years of learning for my diploma, my friends and I have been learning online and from home. This is because of the COVID-19 pandemic, and we are required to quarantine at home to avoid infection. This unique and fun learning process means a lot to me because it was the most beautiful moment of my life and it taught me a lot about the use of technology. Throughout the online class held for four semesters, I have been exposed to a variety of software and hardware technologies by the lecturers, and it can make my daily affairs easier.</p>
+
+
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<img src="images/memory4.jpg" style="width: 800px; height: 500px;">
+
+	<br>
+
+
+	<p>For my last semester, my friends and I have to go to campus because the learning process is done in a hybrid way, which is both online and face-to-face. This semester, I have gotten to know my classmates better because we have met face-to-face and spent a lot of time together. I have also learned to be independent while living in Kelantan. This is because I have been renting with friends, and I also live far away from my family. I am very grateful for having good friends, and I will remember this moment forever because these are the most beautiful moments for me. -_-</p>
+
+
+	</center>
+
+
+
+
 
 </body>
 </html>
