--- a/family.html
+++ b/family.html
@@ -4,8 +4,88 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>family</title>
+	<link rel="stylesheet"  href="css/style4.css">
 </head>
 <body>
+
+	<ul>
+		<li><a href="index.html" target="blank">Home </a></li>
+		<li><a href="biodata.html" target="blank">About Me</a></li>
+		<li><a href="experience.html" target="blank">Experience</a></li>
+		<li><a href="education.html" target="blank">Education</a></li>
+		<li><a href="family.html" target="blank">Family</a></li>
+		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+	
+		
+	</ul>
+
+	<center>
+		<h1>My family</h1>
+
+		<p>~My happy family~</p>
+
+		<img src="images/parents.jpg" style="width: 700px; height: 500px;">
+
+		<h2>...my parents...</h2>
+
+	</center>
+
+
+	<dl>
+		<dt><b>Ayah</b></dt>
+
+		<dd>Name: Amirudin Bin Hj. Sayuti</dd>
+		<dd>Age: 48 years old</dd>
+		<dd>Hobby: Fishing</dd>
+
+		<br>
+
+		<dt><b>Ibu</b></dt>
+		<dd>Name: Sabariha Binti Abd. Hadi Kamil</dd>
+		<dd>Age: 41 years old</dd>
+		<dd>Hobby: Reading Novel</dd>
+
+		</dl>
+
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<center><img src="images/siblings.jpg" style="width: 700px; height: 500px;"></center>
+
+		<center><h2>...my siblings...</h2></center>
+
+		<br>
+		<br>
+
+
+	
+	<dl>
+		<dt><b>Kak Long</b></dt>
+		<dd>Name: Aida Syafiqah Binti Amirudin</dd>
+		<dd>Age: 20 years old</dd>
+		<dd>Hobby: Watching K-drama</dd>
+
+		<br>
+
+		<dt><b>Kak Ngah</b></dt>
+		<dd>Name: Aida Sofea Binti Amirudin</dd>
+		<dd>Age: 17 years old</dd>
+		<dd>Hobby: Reading Comic</dd>
+
+		<br>
+
+
+		<dt><b>Aqil</b></dt>
+		<dd>Name: Muhammad Aqil Sufyan Bin Amirudin</dd>
+		<dd>Age: 12 years old</dd>
+		<dd>Hobby: Watching Anime</dd>
+
+
+		</dl>
 
 </body>
 </html>
