--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,58 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>gallery</title>
+	<link rel="stylesheet"  href="css/style5.css">
 </head>
 <body>
+	<ul>
+		<li><a href="index.html" target="blank">Home </a></li>
+		<li><a href="biodata.html" target="blank">About Me</a></li>
+		<li><a href="experience.html" target="blank">Experience</a></li>
+		<li><a href="education.html" target="blank">Education</a></li>
+		<li><a href="family.html" target="blank">Family</a></li>
+		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+	
+		
+	</ul>
 
+	<center>
+		<h1>My gallery</h1>
+
+	</center>
+
+	<br>
+
+	<center>
+
+    <a href="images/me2.jpg" target="blank" title="~peace~"><img src="images/me2.jpg" style="width: 300px; height: 300px;">
+	<a href="images/me3.jpg" target="blank" title="roar-_-"><img src="images/me3.jpg" style="width: 300px; height: 300px;">
+	<a href="images/me4.jpg" target="blank" title="filter >_<"><img src="images/me4.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+
+	<a href="images/me5.jpg" target="blank" title="horanghae"><img src="images/me5.jpg" style="width: 300px; height: 300px;">
+	<a href="images/memory2.jpg" target="blank" title="smile..."><img src="images/memory2.jpg" style="width: 300px; height: 300px;">
+	<a href="images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="images/memory4.jpg" style="width: 300px; height: 300px;">
+
+	
+	<br>
+
+	<a href="images/donuts.jpg" target="blank" title="yummy"><img src="images/donuts.jpg" style="width: 300px; height: 300px;">
+	<a href="images/foods.jpg" target="blank" title="Itadakimasu"><img src="images/foods.jpg" style="width: 300px; height: 300px;">
+	<a href="images/vibe.jpg" target="blank" title="chill~~"><img src="images/vibe.jpg" style="width: 300px; height: 300px;">
+	
+
+	<br>
+
+	<a href="images/class.jpg" target="blank" title="no comment"><img src="images/class.jpg" style="width: 300px; height: 300px;">
+	<a href="images/view1.jpg" target="blank" title="healing"><img src="images/view1.jpg" style="width: 300px; height: 300px;">
+	
+
+	
+	
+	
+	</center>
+
+	
 </body>
 </html>
