--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<ul>
 		<li><a href="index.html" target="blank">Home </a></li>
-		<li><a href="biodata.html" target="blank">Biodata</a></li>
+		<li><a href="biodata.html" target="blank">About me</a></li>
 		<li><a href="experience.html" target="blank">Experience</a></li>
 		<li><a href="education.html" target="blank">Education</a></li>
 		<li><a href="family.html" target="blank">Family</a></li>
