--- a/gallery.html
+++ b/gallery.html
@@ -34,21 +34,40 @@
 	<br>
 
 	<a href="images/me5.jpg" target="blank" title="horanghae"><img src="images/me5.jpg" style="width: 300px; height: 300px;">
-	<a href="images/memory2.jpg" target="blank" title="smile..."><img src="images/memory2.jpg" style="width: 300px; height: 300px;">
+	<a href="images/memory2.jpg" target="blank" title="친구"><img src="images/memory2.jpg" style="width: 300px; height: 300px;">
 	<a href="images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="images/memory4.jpg" style="width: 300px; height: 300px;">
 
 	
 	<br>
 
-	<a href="images/donuts.jpg" target="blank" title="yummy"><img src="images/donuts.jpg" style="width: 300px; height: 300px;">
-	<a href="images/foods.jpg" target="blank" title="Itadakimasu"><img src="images/foods.jpg" style="width: 300px; height: 300px;">
+	<a href="images/classmate.jpg" target="blank" title="~5A~"><img src="images/classmate.jpg" style="width: 300px; height: 300px;">
+	<a href="images/program.jpg" target="blank" title="がんばって"><img src="images/program.jpg" style="width: 300px; height: 300px;">	
 	<a href="images/vibe.jpg" target="blank" title="chill~~"><img src="images/vibe.jpg" style="width: 300px; height: 300px;">
 	
 
 	<br>
 
 	<a href="images/class.jpg" target="blank" title="no comment"><img src="images/class.jpg" style="width: 300px; height: 300px;">
-	<a href="images/view1.jpg" target="blank" title="healing"><img src="images/view1.jpg" style="width: 300px; height: 300px;">
+	<a href="images/donuts.jpg" target="blank" title="yummy"><img src="images/donuts.jpg" style="width: 300px; height: 300px;">
+	<a href="images/foods.jpg" target="blank" title="Itadakimasu"><img src="images/foods.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+
+	<a href="images/bts.jpg" target="blank" title="~BTS~"><img src="images/bts.jpg" style="width: 300px; height: 300px;">
+	<a href="images/svt.jpg" target="blank" title="~SEVENTEEN~"><img src="images/svt.jpg" style="width: 300px; height: 300px;">
+	<a href="images/nct.jpg" target="blank" title="~NCT127~"><img src="images/nct.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+
+	<a href="images/theweeknd.jpg" target="blank" title="~THE WEEKND~"><img src="images/theweeknd.jpg" style="width: 300px; height: 300px;">
+	<a href="images/bruno.jpg" target="blank" title="~BRUNO MARS~"><img src="images/bruno.jpg" style="width: 300px; height: 300px;">
+	<a href="images/fb.jpg" target="blank" title="FRUIT BASKET"><img src="images/fb.jpg" style="width: 300px; height: 300px;">
+
+	<br>
+
+	<a href="images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="images/jk.jpg" style="width: 300px; height: 300px;">
+	<a href="images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="images/hmc.jpg" style="width: 300px; height: 300px;">
+	
 	
 
 	
