--- a/education.html
+++ b/education.html
@@ -27,7 +27,7 @@
 
 	<h2>Sekolah Kebangsaan Bukit Kapar</h2>
 
-	<img src="images/skbk.jpg" style="width: 300px; height: 300px;">
+	<img src="Images/skbk.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 	<p>I studied at <strong>Sekolah Kebangsaan Bukit Kapar</strong> for 6 years from 7 years old to 12 years old >_<</p>
@@ -36,7 +36,7 @@
 
 	<h2>Sekolah Menengah Kebangsaan Perempuan Kapar</h2>
 
-	<img src="images/smkpk.png" style="width: 300px; height: 300px;">
+	<img src="Images/smkpk.png" style="width: 300px; height: 300px;">
 
 	<br>
 	<p>I made so may memories and friends at <strong>SMKPK</strong> for 5 years, and i like this school very much because this school just for girl and we as students are really close like a happy family -_-</p>
@@ -45,7 +45,7 @@
 
 	<h2>Universiti Teknologi Mara Machang, Kelantan</h2>
 
-	<img src="images/uitm.jpg" style="width: 300px; height: 300px;">
+	<img src="Images/uitm.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 	<p> I continue my studies at <strong>UITM Machang</strong> , as an Information Management students ~_~</p>
