--- a/family.html
+++ b/family.html
@@ -24,7 +24,7 @@
 
 		<p>~My happy family~</p>
 
-		<img src="images/parents.jpg" style="width: 700px; height: 500px;">
+		<img src="Images/parents.jpg" style="width: 700px; height: 500px;">
 
 		<h2>...my parents...</h2>
 
@@ -54,7 +54,7 @@
 		<br>
 		<br>
 
-		<center><img src="images/siblings.jpg" style="width: 700px; height: 500px;"></center>
+		<center><img src="Images/siblings.jpg" style="width: 700px; height: 500px;"></center>
 
 		<center><h2>...my siblings...</h2></center>
 
