--- a/gallery.html
+++ b/gallery.html
@@ -27,46 +27,46 @@
 
 	<center>
 
-    <a href="images/me2.jpg" target="blank" title="~peace~"><img src="images/me2.jpg" style="width: 300px; height: 300px;">
-	<a href="images/me3.jpg" target="blank" title="roar-_-"><img src="images/me3.jpg" style="width: 300px; height: 300px;">
-	<a href="images/me4.jpg" target="blank" title="filter >_<"><img src="images/me4.jpg" style="width: 300px; height: 300px;">
+    <a href="Images/me2.jpg" target="blank" title="~peace~"><img src="images/me2.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/me3.jpg" target="blank" title="roar-_-"><img src="images/me3.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/me4.jpg" target="blank" title="filter >_<"><img src="images/me4.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 
-	<a href="images/me5.jpg" target="blank" title="horanghae"><img src="images/me5.jpg" style="width: 300px; height: 300px;">
-	<a href="images/memory2.jpg" target="blank" title="친구"><img src="images/memory2.jpg" style="width: 300px; height: 300px;">
-	<a href="images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="images/memory4.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/me5.jpg" target="blank" title="horanghae"><img src="images/me5.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/memory2.jpg" target="blank" title="친구"><img src="images/memory2.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="images/memory4.jpg" style="width: 300px; height: 300px;">
 
 	
 	<br>
 
-	<a href="images/classmate.jpg" target="blank" title="~5A~"><img src="images/classmate.jpg" style="width: 300px; height: 300px;">
-	<a href="images/program.jpg" target="blank" title="がんばって"><img src="images/program.jpg" style="width: 300px; height: 300px;">	
-	<a href="images/vibe.jpg" target="blank" title="chill~~"><img src="images/vibe.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/classmate.jpg" target="blank" title="~5A~"><img src="images/classmate.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/program.jpg" target="blank" title="がんばって"><img src="images/program.jpg" style="width: 300px; height: 300px;">	
+	<a href="Images/vibe.jpg" target="blank" title="chill~~"><img src="images/vibe.jpg" style="width: 300px; height: 300px;">
 	
 
 	<br>
 
-	<a href="images/class.jpg" target="blank" title="no comment"><img src="images/class.jpg" style="width: 300px; height: 300px;">
-	<a href="images/donuts.jpg" target="blank" title="yummy"><img src="images/donuts.jpg" style="width: 300px; height: 300px;">
-	<a href="images/foods.jpg" target="blank" title="Itadakimasu"><img src="images/foods.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/class.jpg" target="blank" title="no comment"><img src="images/class.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/donuts.jpg" target="blank" title="yummy"><img src="images/donuts.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/foods.jpg" target="blank" title="Itadakimasu"><img src="images/foods.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 
-	<a href="images/bts.jpg" target="blank" title="~BTS~"><img src="images/bts.jpg" style="width: 300px; height: 300px;">
-	<a href="images/svt.jpg" target="blank" title="~SEVENTEEN~"><img src="images/svt.jpg" style="width: 300px; height: 300px;">
-	<a href="images/nct.jpg" target="blank" title="~NCT127~"><img src="images/nct.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/bts.jpg" target="blank" title="~BTS~"><img src="images/bts.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/svt.jpg" target="blank" title="~SEVENTEEN~"><img src="images/svt.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/nct.jpg" target="blank" title="~NCT127~"><img src="images/nct.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 
-	<a href="images/theweeknd.jpg" target="blank" title="~THE WEEKND~"><img src="images/theweeknd.jpg" style="width: 300px; height: 300px;">
-	<a href="images/bruno.jpg" target="blank" title="~BRUNO MARS~"><img src="images/bruno.jpg" style="width: 300px; height: 300px;">
-	<a href="images/fb.jpg" target="blank" title="FRUIT BASKET"><img src="images/fb.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/theweeknd.jpg" target="blank" title="~THE WEEKND~"><img src="images/theweeknd.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/bruno.jpg" target="blank" title="~BRUNO MARS~"><img src="images/bruno.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/fb.jpg" target="blank" title="FRUIT BASKET"><img src="images/fb.jpg" style="width: 300px; height: 300px;">
 
 	<br>
 
-	<a href="images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="images/jk.jpg" style="width: 300px; height: 300px;">
-	<a href="images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="images/hmc.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="images/jk.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="images/hmc.jpg" style="width: 300px; height: 300px;">
 	
 	
 
