--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-	<img src="images/myself.jpg" style="height: 1000px; width: 1350px;"> <br>
+	<img src="Images/myself.jpg" style="height: 1000px; width: 1350px;"> <br>
 	
 
 	
