--- a/biodata.html
+++ b/biodata.html
@@ -27,7 +27,7 @@
 
 	<br>
 
-	<center><img src="images/me.jpg" style="height: 250px; width: 200px;"></center> <br>
+	<center><img src="Images/me.jpg" style="height: 250px; width: 200px;"></center> <br>
 
 	<dl>
 		<dt><b>_About Myself_</b></dt><br>
@@ -44,9 +44,9 @@
 	<center><h1>Contact me</h1></center>
 	<br>
 	<center>
-		<img src="images/mail.png" alt="E-mail Icon" style="width:50px; height: 50px;"> <b><p>~E-mail~</p></b>
+		<img src="Images/mail.png" alt="E-mail Icon" style="width:50px; height: 50px;"> <b><p>~E-mail~</p></b>
 		<p>syafiqaaida02@gmail.com</p> <br>
-		<img src="images/phone.png" alt="Phone Icon" style="width:50px; height: 50px;"> <b><p>~Call me~</p></b>
+		<img src="Images/phone.png" alt="Phone Icon" style="width:50px; height: 50px;"> <b><p>~Call me~</p></b>
 		<p>+6016-364 7203</p>
 
 	</center>
