--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
 
 	<center>
 
-	<img src="images/classmates.jpg" style="width: 900px; height: 500px;">
+	<img src="Images/classmates.jpg" style="width: 900px; height: 500px;">
 	
 	<br>
 	
@@ -39,7 +39,7 @@
 	<br>
 	<br>
 
-	<img src="images/memory4.jpg" style="width: 800px; height: 500px;">
+	<img src="Images/memory4.jpg" style="width: 800px; height: 500px;">
 
 	<br>
 
