--- a/biodata.html
+++ b/biodata.html
@@ -56,7 +56,7 @@
 
 	<center><b><p>~My social media~</p></b></center>
 	<center>
-	<a href="https://www.facebook.com/aida.syafiqa.12?mibextid=ZbWKwL"><img src="Images/Facebook.png" alt="Facebook Icon" style="width:50px; height: 50px;"> </a>
+	<a href="https://www.facebook.com/aida.syafiqa.12?mibextid=ZbWKwL"><img src="Images/facebook.png" alt="Facebook Icon" style="width:50px; height: 50px;"> </a>
 	<a href="https://instagram.com/aidasyi?igshid=NTA5ZTk1NTc="><img src="Images/instagram.png" alt="Instagram Icon" style="width:55px; height: 55px;"> </a>
 	<a href="https://twitter.com/Ashwho96?t=DGDh5ux26rYouWOsMZqxYw&s=35"><img src="Images/Twitter.png" alt="Twitter Icon" style="width:55px; height: 55px;"> </a>
 
