--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,12 @@
 	<a href="Images/memory2.jpg" target="blank" title="친구"><img src="Images/memory2.jpg" style="width: 300px; height: 300px;">
 	<a href="Images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="Images/memory4.jpg" style="width: 300px; height: 300px;">
 
+	<br>
+
+	<a href="Images/5a1.jpg" target="blank" title="~uwuuuu~"><img src="Images/5a1.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/5a2.jpg" target="blank" title="~hooomans~"><img src="Images/5a2.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/5a3.jpg" target="blank" title="~5A Rangers~"><img src="Images/5a3.jpg" style="width: 300px; height: 300px;">
+
 	
 	<br>
 
@@ -67,6 +73,8 @@
 
 	<a href="Images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="Images/jk.jpg" style="width: 300px; height: 300px;">
 	<a href="Images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="Images/hmc.jpg" style="width: 300px; height: 300px;">
+
+
 	
 	
 
