--- a/gallery.html
+++ b/gallery.html
@@ -49,6 +49,13 @@
 	<a href="Images/classmate.jpg" target="blank" title="~5A~"><img src="Images/classmate.jpg" style="width: 300px; height: 300px;">
 	<a href="Images/program.jpg" target="blank" title="がんばって"><img src="Images/program.jpg" style="width: 300px; height: 300px;">	
 	<a href="Images/vibe.jpg" target="blank" title="chill~~"><img src="Images/vibe.jpg" style="width: 300px; height: 300px;">
+
+
+	<br>
+
+	<a href="Images/mafia.jpg" target="blank" title="~MAFIA IN YOUR AREA~"><img src="Images/mafia.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/mafia2.jpg" target="blank" title="~MAFIA~"><img src="Images/mafia2.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/mafia3.jpg" target="blank" title="~GURLS~"><img src="Images/mafia3.jpg" style="width: 300px; height: 300px;">
 	
 
 	<br>
