--- a/gallery.html
+++ b/gallery.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 	<ul>
-		<li><a href="index.html" target="blank">Home </a></li>
-		<li><a href="biodata.html" target="blank">About Me</a></li>
-		<li><a href="experience.html" target="blank">Experience</a></li>
-		<li><a href="education.html" target="blank">Education</a></li>
-		<li><a href="family.html" target="blank">Family</a></li>
-		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+		<li><a href="index.html">Home </a></li>
+		<li><a href="biodata.html">About Me</a></li>
+		<li><a href="experience.html">Experience</a></li>
+		<li><a href="education.html">Education</a></li>
+		<li><a href="family.html">Family</a></li>
+		<li><a href="gallery.html">Gallery</a></li> 
 	
 		
 	</ul>
