--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 		 	
 	
 	<ul>
-		<li><a href="index.html" target="blank">Home </a></li>
-		<li><a href="biodata.html" target="blank">About me</a></li>
-		<li><a href="experience.html" target="blank">Experience</a></li>
-		<li><a href="education.html" target="blank">Education</a></li>
-		<li><a href="family.html" target="blank">Family</a></li>
-		<li><a href="gallery.html" target="blank">Gallery</a></li> 
+		<li><a href="index.html">Home </a></li>
+		<li><a href="biodata.html">About me</a></li>
+		<li><a href="experience.html">Experience</a></li>
+		<li><a href="education.html">Education</a></li>
+		<li><a href="family.html">Family</a></li>
+		<li><a href="gallery.html">Gallery</a></li> 
 		
 	
 		
 	</ul>
 
+	
 
-
-	<img src="Images/myself.jpg" style="height: 1000px; width: 1350px;"> <br>
+	<center>
+	<img src="Images/myself.jpg" style="height: 600px; width: 1000px;"> <br>
+	</center>
 	
 
 	
