--- a/gallery.html
+++ b/gallery.html
@@ -53,8 +53,8 @@
 
 	<br>
 
-	<a href="Images/mafia.jpg" target="blank" title="~MAFIA IN YOUR AREA~"><img src="Images/mafia.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/mafia2.jpg" target="blank" title="~MAFIA~"><img src="Images/mafia2.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/mafia.jpg" target="blank" title="~MAFIA~"><img src="Images/mafia.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/mafia2.jpg" target="blank" title="~MAFIA IN YOUR AREA~"><img src="Images/mafia2.jpg" style="width: 300px; height: 300px;">
 	<a href="Images/mafia3.jpg" target="blank" title="~GURLS~"><img src="Images/mafia3.jpg" style="width: 300px; height: 300px;">
 	
 
