--- a/education.html
+++ b/education.html
@@ -94,11 +94,24 @@
 
 		</center>
 
+	</table>
+
+
+
+	<br>
+
+
 
 
 
 	
 
+<center>
+<footer>
+      <p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+
+</center>
 
 
 </body>
