--- a/gallery.html
+++ b/gallery.html
@@ -27,69 +27,67 @@
 
 	<center>
 
-    <a href="Images/me2.jpg" target="blank" title="~peace~"><img src="Images/me2.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/me3.jpg" target="blank" title="roar-_-"><img src="Images/me3.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/me4.jpg" target="blank" title="filter >_<"><img src="Images/me4.jpg" style="width: 300px; height: 300px;">
+    <a href="Images/me2.jpg" target="blank" title="~peace~"><img src="Images/me2.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/me3.jpg" target="blank" title="roar-_-"><img src="Images/me3.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/me4.jpg" target="blank" title="filter >_<"><img src="Images/me4.jpg" style="width: 300px; height: 300px;"></a>
 
 	<br>
 
-	<a href="Images/me5.jpg" target="blank" title="horanghae"><img src="Images/me5.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/memory2.jpg" target="blank" title="친구"><img src="Images/memory2.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="Images/memory4.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/me5.jpg" target="blank" title="horanghae"><img src="Images/me5.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/memory2.jpg" target="blank" title="친구"><img src="Images/memory2.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/memory4.jpg" target="blank" title="kiyopta >_<"><img src="Images/memory4.jpg" style="width: 300px; height: 300px;"></a>
 
 	<br>
 
-	<a href="Images/5a1.jpg" target="blank" title="~uwuuuu~"><img src="Images/5a1.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/5a2.jpg" target="blank" title="~hooomans~"><img src="Images/5a2.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/5a3.jpg" target="blank" title="~5A Rangers~"><img src="Images/5a3.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/5a1.jpg" target="blank" title="~uwuuuu~"><img src="Images/5a1.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/5a2.jpg" target="blank" title="~hooomans~"><img src="Images/5a2.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/5a3.jpg" target="blank" title="~5A Rangers~"><img src="Images/5a3.jpg" style="width: 300px; height: 300px;"></a>
 
 	
 	<br>
 
-	<a href="Images/classmate.jpg" target="blank" title="~5A~"><img src="Images/classmate.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/program.jpg" target="blank" title="がんばって"><img src="Images/program.jpg" style="width: 300px; height: 300px;">	
-	<a href="Images/vibe.jpg" target="blank" title="chill~~"><img src="Images/vibe.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/classmate.jpg" target="blank" title="~5A~"><img src="Images/classmate.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/program.jpg" target="blank" title="がんばって"><img src="Images/program.jpg" style="width: 300px; height: 300px;">	</a>
+	<a href="Images/vibe.jpg" target="blank" title="chill~~"><img src="Images/vibe.jpg" style="width: 300px; height: 300px;"></a>
 
 
 	<br>
 
-	<a href="Images/mafia.jpg" target="blank" title="~MAFIA~"><img src="Images/mafia.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/mafia2.jpg" target="blank" title="~MAFIA IN YOUR AREA~"><img src="Images/mafia2.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/mafia3.jpg" target="blank" title="~GURLS~"><img src="Images/mafia3.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/mafia.jpg" target="blank" title="~MAFIA~"><img src="Images/mafia.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/mafia2.jpg" target="blank" title="~MAFIA IN YOUR AREA~"><img src="Images/mafia2.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/mafia3.jpg" target="blank" title="~GURLS~"><img src="Images/mafia3.jpg" style="width: 300px; height: 300px;"></a>
 	
 
 	<br>
 
-	<a href="Images/class.jpg" target="blank" title="no comment"><img src="Images/class.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/donuts.jpg" target="blank" title="yummy"><img src="Images/donuts.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/foods.jpg" target="blank" title="Itadakimasu"><img src="Images/foods.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/class.jpg" target="blank" title="no comment"><img src="Images/class.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/donuts.jpg" target="blank" title="yummy"><img src="Images/donuts.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/foods.jpg" target="blank" title="Itadakimasu"><img src="Images/foods.jpg" style="width: 300px; height: 300px;"></a>
 
 	<br>
 
-	<a href="Images/bts.jpg" target="blank" title="~BTS~"><img src="Images/bts.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/svt.jpg" target="blank" title="~SEVENTEEN~"><img src="Images/svt.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/nct.jpg" target="blank" title="~NCT127~"><img src="Images/nct.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/bts.jpg" target="blank" title="~BTS~"><img src="Images/bts.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/svt.jpg" target="blank" title="~SEVENTEEN~"><img src="Images/svt.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/nct.jpg" target="blank" title="~NCT127~"><img src="Images/nct.jpg" style="width: 300px; height: 300px;"></a>
 
 	<br>
 
-	<a href="Images/theweeknd.jpg" target="blank" title="~THE WEEKND~"><img src="Images/theweeknd.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/bruno.jpg" target="blank" title="~BRUNO MARS~"><img src="Images/bruno.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/fb.jpg" target="blank" title="FRUIT BASKET"><img src="Images/fb.jpg" style="width: 300px; height: 300px;">
+	<a href="Images/theweeknd.jpg" target="blank" title="~THE WEEKND~"><img src="Images/theweeknd.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/bruno.jpg" target="blank" title="~BRUNO MARS~"><img src="Images/bruno.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/fb.jpg" target="blank" title="FRUIT BASKET"><img src="Images/fb.jpg" style="width: 300px; height: 300px;"></a>
 
 	<br>
 
-	<a href="Images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="Images/jk.jpg" style="width: 300px; height: 300px;">
-	<a href="Images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="Images/hmc.jpg" style="width: 300px; height: 300px;">
-
-
-	
-	
-
-	
-	
+	<a href="Images/jk.jpg" target="blank" title="JUJUTSU KAISEN"><img src="Images/jk.jpg" style="width: 300px; height: 300px;"></a>
+	<a href="Images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="Images/hmc.jpg" style="width: 300px; height: 300px;"></a>
 	
 	</center>
 
+<center>
+<footer>
+	<p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+</center>
 	
 </body>
 </html>
