--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
 	<img src="Images/myself.jpg" style="height: 600px; width: 1000px;"> <br>
 	</center>
 	
+<br>
+<br>	
 
-	
 
-
-
+<center>
+<footer>
+      <p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+ </center>
 	
 </body>
 </html>
+
