--- a/biodata.html
+++ b/biodata.html
@@ -64,16 +64,16 @@
 
 
 	
-	
-
-
-
-
 
 	
+<br>
 
 
-
+<center>
+<footer>
+      <p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+  </center>
 	
 
 </body>
