--- a/experience.html
+++ b/experience.html
@@ -49,8 +49,13 @@
 
 	</center>
 
+<br>
 
-
+<center>
+<footer>
+      <p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+  </center>
 
 
 </body>
