--- a/family.html
+++ b/family.html
@@ -87,5 +87,11 @@
 
 		</dl>
 
+
+<center>
+<footer>
+      <p style="background-color: dimgray; color: black; font-family: centuryGothic; font-size: 20px">&copy; <em id="date" ></em>Created by Ash</p>
+    </footer>
+</center>
 </body>
 </html>
