--- a/education.html
+++ b/education.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="Images/gudetama2.png" type="image/gif" sizes="50x50">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>education</title>
