--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="Images/gudetama2.png" type="image/gif" sizes="50x50">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>gallery</title>
 	<link rel="stylesheet"  href="css/style5.css">
+
+	
 </head>
 <body>
 	<ul>
