--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<link rel="icon" href="Images/gudetama2.png" type="image/gif" sizes="50x50">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Personal Website Aida</title>
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
-		
-
+		<div class="cursor rounded"></div>
+<div class="cursor pointed"><div>
+	
+<center>
+	<h1 style="color: ghostwhite; font-family: Sugar Snow; font-size: 50px;  width: 1000px; height: 60px;"><marquee>~WELCOME TO MY PERSONAL WEBSITE~</marquee></h1>
+	</center>
 		 	
 	
 	<ul>
@@ -23,6 +29,10 @@
 		
 	</ul>
 
+	<br>
+	<br>
+	<br>
+	
 	
 
 	<center>
@@ -32,6 +42,41 @@
 <br>
 <br>	
 
+<center>
+	 <div id="clock">17:56:00</div> 
+  
+    <script> 
+        setInterval(showTime, 1000); 
+        function showTime() { 
+            let time = new Date(); 
+            let hour = time.getHours(); 
+            let min = time.getMinutes(); 
+            let sec = time.getSeconds(); 
+            am_pm = "AM"; 
+  
+            if (hour > 12) { 
+                hour -= 12; 
+                am_pm = "PM"; 
+            } 
+            if (hour == 0) { 
+                hr = 12; 
+                am_pm = "AM"; 
+            } 
+  
+            hour = hour < 10 ? "0" + hour : hour; 
+            min = min < 10 ? "0" + min : min; 
+            sec = sec < 10 ? "0" + sec : sec; 
+  
+            let currentTime = hour + ":"  
+                + min + ":" + sec + am_pm; 
+  
+            document.getElementById("clock") 
+                .innerHTML = currentTime; 
+        } 
+  
+        showTime(); 
+    </script> 
+   </center>
 
 <center>
 <footer>
