--- a/education.html
+++ b/education.html
@@ -98,9 +98,16 @@
 	</table>
 
 
-
+	<br>
 	<br>
 
+	<h2>My video ~</h2>
+
+
+
+  <center><video controls autoplay style="width: 600px; height: 300px; "> 
+   	<source  src="Video/AIDA SYAFIQAH BINTI AMIRUDIN(2020490662)-D1IM1104A.mp4" type="video/mp4">
+   </video> </center> 
 
 
 
