--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,14 @@
 	</center>
 
 	<br>
+	
+
+   <center><audio controls autoplay style="width: 300px;">
+   	<source  src="Audio/Sparkle.mp3" type="audio/mp3">
+   </audio> </center> 
+
+   <br>
+	<br>
 
 	<center>
 
@@ -85,6 +93,8 @@
 	<a href="Images/hmc.jpg" target="blank" title="HOWL'S MOVING CASTLE"><img src="Images/hmc.jpg" style="width: 300px; height: 300px;"></a>
 	
 	</center>
+
+
 
 <center>
 <footer>
