--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 
 
-
 		<div class="cursor rounded"></div>
 <div class="cursor pointed"><div>
 	
@@ -39,9 +38,77 @@
 	
 	
 
-	<center>
-	<img src="Images/myself.jpg" style="height: 600px; width: 1000px;"> <br>
-	</center>
+
+	<div class="slideshow-container">
+<center>
+	<div class="mySlides fade">
+	  <div class="numbertext">1 / 3</div>
+	  <img src="Images/myself.jpg" style="width:900px;">
+	</div>
+</center>
+
+
+<center>
+	<div class="mySlides fade">
+	  <div class="numbertext">2 / 3</div>
+	  <img src="Images/aida1.png" style="width:900px;">
+	</div>
+</center>
+
+<center>
+
+	<div class="mySlides fade">
+	  <div class="numbertext">3 / 3</div>
+	  <img src="Images/aida2.png" style="width:900px;">
+		</div>
+</center>
+
+	
+	
+	<br>
+
+	
+
+	</div>
+	<br>
+
+	<div style="text-align:center">
+	  <span class="dot" onclick="currentSlide(1)"></span> 
+	  <span class="dot" onclick="currentSlide(2)"></span> 
+	  <span class="dot" onclick="currentSlide(3)"></span> 
+	</div>
+
+	<script>
+	let slideIndex = 1;
+	showSlides(slideIndex);
+
+	function plusSlides(n) 
+	{
+	  showSlides(slideIndex += n);
+	}
+
+	function currentSlide(n) 
+	{
+	  showSlides(slideIndex = n);
+	}
+
+	function showSlides(n) 
+	{
+	  let i;
+	  let slides = document.getElementsByClassName("mySlides");
+	  let dots = document.getElementsByClassName("dot");
+	  if (n > slides.length) {slideIndex = 1}    
+	  if (n < 1) {slideIndex = slides.length}
+	  for (i = 0; i < slides.length; i++) {
+	    slides[i].style.display = "none";  
+	  }
+	  for (i = 0; i < dots.length; i++) {
+	    dots[i].className = dots[i].className.replace(" active", "");
+	  }
+	  slides[slideIndex-1].style.display = "block";  
+	  dots[slideIndex-1].className += " active";
+	}
+	</script> <br>
 	
 <br>
 <br>	
